force-app/main/metadata/objects/Docs_Source__mdt/Docs_Source__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for documentation sources in Docs Unlocked. Each record maps an app to a repository and content path from a supported provider.</description>
    <label>Doc Source</label>
    <pluralLabel>Doc Sources</pluralLabel>
</CustomObject>