force-app/main/metadata/objects/Docs_Source__mdt/fields/Allow_Version_Switching__c.field-meta.xml
<CustomField>
    <fullName>Allow_Version_Switching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether users can switch between different versions/branches/tags of the documentation.</description>
    <inlineHelpText>Enable to show a version picker in the documentation viewer</inlineHelpText>
    <label>Allow Version Switching</label>
    <type>Checkbox</type>
</CustomField>