force-app/main/metadata/objects/Docs_Source__mdt/fields/Content_Path__c.field-meta.xml
<CustomField>
    <fullName>Content_Path__c</fullName>
    <description>The path within the repository to the documentation content folder.</description>
    <inlineHelpText>Path to documentation folder (e.g., docs/content or public/content)</inlineHelpText>
    <label>Content Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>