force-app/main/metadata/objects/Docs_Source__mdt/fields/Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Credential_Name__c</fullName>
    <description>The developer name of the External Credential used for API authentication.</description>
    <inlineHelpText>External Credential name for API authentication</inlineHelpText>
    <label>Credential Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>