force-app/main/metadata/objects/Docs_Source__mdt/fields/Default_Ref__c.field-meta.xml
<CustomField>
    <fullName>Default_Ref__c</fullName>
    <description>The default branch or tag to use when loading documentation.</description>
    <inlineHelpText>Default branch or tag (e.g., main, master, v1.0.0)</inlineHelpText>
    <label>Default Branch/Tag</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>