force-app/main/metadata/objects/Docs_Source__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of this documentation source.</description>
    <inlineHelpText>Optional description for this documentation source</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>