force-app/main/metadata/objects/Docs_Source__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this documentation source is currently active and available.</description>
    <inlineHelpText>Uncheck to disable this documentation source</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>