force-app/main/metadata/objects/Docs_Source__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>The documentation provider/platform where the content is hosted.</description>
    <inlineHelpText>Select the platform where your documentation is hosted</inlineHelpText>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GitHub</fullName>
                <default>true</default>
                <label>GitHub</label>
            </value>
            <value>
                <fullName>StaticResource</fullName>
                <label>Static Resource</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>