force-app/main/metadata/objects/Docs_Source__mdt/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <description>The name of the repository containing the documentation.</description>
    <inlineHelpText>Enter the repository name</inlineHelpText>
    <label>Repository Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>