force-app/main/metadata/objects/Docs_Source__mdt/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <description>The owner/organization of the repository (e.g., GitHub username or organization name).</description>
    <inlineHelpText>Enter the repository owner or organization name</inlineHelpText>
    <label>Repository Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>